<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">案例分析</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
   	<string name="welcome_page_text">思修案例分析学习中心</string>
   	<string name="welcome_page_line_text">——大连理工大学马列学院</string>
	<string name="enter_main_page">点击进入</string>
	<string name="case_link">案例</string>
	<string name="media_link">多媒体</string>
	<string name="visual_link">可视化</string>
	<string name="xxx_link">XXX</string>
	<string name="sixiu_center">思修案例分析中心</string>
	<string name="dlut_name">——大连理工大学马列学院</string>
	<string name="home_page">主页</string>
	<string name="study_page">学习</string>
	<string name="institution_page">机构</string>
	<string name="case_page">案例</string>
	<string name="mine_page">我的</string>
	<string name="commit_button">Submit</string>
	<string name="my_page">我的主页</string>
	<string name="setting">设置</string>
	<string name="about">关于本软件</string>
	<string name="enter_mine_page">进入个人主页</string>
	<string name="edit_personal_info">编辑个人信息</string>
	<string name="edit_portrait">设置头像</string>
	<string name="edit_gender">性别</string>
	<string name="edit_nickname">昵称</string>
	<string name="edit_major">专业</string>
	<string name="edit_class">班级</string>
	<string name="signin">登录</string>
	<string name="ple_input">请输入...</string>
	<string name="personal_info">个人信息</string>
	<string name="edit_peronal_info">编辑个人信息</string>
	<string name="modify_personal_info">请修改</string>
</resources>
