<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/blue"
        android:orientation="horizontal"
        >
       <ImageView 
           android:layout_width="58dp"
           android:layout_height="58dp"
           android:scaleType="fitXY"
           android:padding="4dp"
           android:src="@drawable/dlutlabel"
           />
          <LinearLayout 
               android:layout_width="match_parent"
	           android:layout_height="62dp"
	           android:orientation="vertical"
              >
              <TextView 
	               android:layout_gravity="center_vertical"
	               android:layout_width="match_parent"
	               android:layout_height="36dp"
	               android:layout_marginTop="8dp"
	               android:text="@string/sixiu_center"
	               android:textSize="25sp"
	               android:textColor="#000000"
               />
           	 <TextView 
	               android:layout_width="match_parent"
	               android:layout_height="26dp"
	               android:textSize="15sp"
	               android:text="@string/dlut_name"
	               android:layout_marginLeft="80dp"
	               android:textColor="#000000"
               />
          </LinearLayout>
    </LinearLayout>
    <com.widgets.analyzecase.SlideShowView
        android:id="@+id/sv_photo"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@android:color/darker_gray" />
    <RadioGroup
            android:id="@+id/home_button_group"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
        	android:layout_marginTop="8dp"
        	android:background="#FFFF"
            android:orientation="horizontal" >
            <RadioButton 
                android:id="@+id/case_link"
                android:layout_weight="1"
				style="?android:attr/buttonBarButtonStyle"
                android:button="@null"
                android:layout_height="55dp"
                android:layout_width="wrap_content"
                android:text="@string/case_link"
                android:focusable="true"
                />
            <RadioButton
                android:id="@+id/media_link"
                android:layout_weight="1"
				style="?android:attr/buttonBarButtonStyle"
                android:button="@null"
                android:layout_height="55dp"
                android:layout_width="wrap_content"
                android:text="@string/media_link"
                />
            <RadioButton 
                android:id="@+id/visual_link"
                android:layout_weight="1"
				style="?android:attr/buttonBarButtonStyle"
                android:button="@null"
                android:layout_height="55dp"
                android:layout_width="wrap_content"
                android:text="@string/visual_link"
                />
            <RadioButton
                android:id="@+id/xxx_link"
                android:layout_weight="1"
				style="?android:attr/buttonBarButtonStyle"
                android:button="@null"
                android:layout_height="55dp"
                android:layout_width="wrap_content"
                android:text="@string/xxx_link"
                />
        </RadioGroup>
   
	<ListView 
	    android:id="@+id/home_page_listview"
	    android:layout_marginTop="8dp"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    />

</LinearLayout>
