<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DBDBDB"
    android:orientation="vertical" >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:gravity="center"
        android:text="@string/edit_personal_info"
        android:textSize="20dp"
        android:background="@drawable/blue_head"
        />

    <RelativeLayout
        android:id="@+id/mine_edit_portrait"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:background="#FFFF"
        android:orientation="horizontal" >

        <com.widgets.analyzecase.CircleImageView
	        android:layout_width="65dp"
	        android:layout_height="65dp"
	        android:layout_marginTop="20dp"
	        android:layout_marginLeft="15dp"
	        android:src="@drawable/setting_portrait"
	        android:id="@+id/setting_head_portrait"
         />
        <ImageView
            android:id="@+id/right_arrow_setting"
            android:layout_width="8dp"
            android:layout_height="13dp"
            android:layout_marginTop="48dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="3dp"
            android:src="@drawable/right_arrow_white" />
        <TextView 
            android:id="@+id/sitting_mine_portrait"
            android:layout_height="15dp"
            android:layout_width="wrap_content"
            android:layout_marginTop="47dp"
            android:layout_toLeftOf="@id/right_arrow_setting"
            android:layout_marginRight="4dp"
            android:textColor="#C2C2C2"
            android:text="@string/edit_portrait"
            />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/mine_edit_nickname"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="13dp"
        android:background="#FFFF"
        >
        <ImageView 
            android:id="@+id/about_arrow_nickname"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:layout_width="6dp"
            android:layout_height="13dp"
            android:src="@drawable/right_arrow_white"
	        android:layout_marginTop="15dp"
            />
	    <TextView
	        android:layout_toLeftOf="@id/about_arrow_nickname"
	        android:layout_width="match_parent"
	        android:layout_alignParentLeft="true"
	        android:layout_marginLeft="5dp"
	        android:layout_marginTop="15dp"
	        android:layout_height="25dp"
	        android:textColor="#636363"
	        android:textSize="15dp"
	        android:text="@string/edit_nickname"
	        />
	    <TextView
	        android:layout_toLeftOf="@id/about_arrow_nickname"
	        android:layout_width="wrap_content"
	        android:layout_marginRight="5dp"
	        android:layout_marginTop="12dp"
	        android:layout_height="25dp"
	        android:textColor="#969696"
	        android:textSize="15dp"
	        android:id="@+id/nickname"
	        />
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/mine_edit_gender"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="3dp"
        android:background="#FFFF"
        >
        <ImageView 
            android:id="@+id/about_arrow_gender"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:layout_width="6dp"
            android:layout_height="13dp"
            android:src="@drawable/right_arrow_white"
	        android:layout_marginTop="15dp"
            />
	    <TextView
	        android:layout_toLeftOf="@id/about_arrow_gender"
	        android:layout_width="match_parent"
	        android:layout_alignParentLeft="true"
	        android:layout_marginLeft="5dp"
	        android:layout_marginTop="15dp"
	        android:layout_height="25dp"
	        android:textColor="#636363"
	        android:textSize="15dp"
	        android:text="@string/edit_gender"
	        />
	    <TextView
	        android:layout_toLeftOf="@id/about_arrow_gender"
	        android:layout_width="wrap_content"
	        android:layout_marginRight="5dp"
	        android:layout_marginTop="12dp"
	        android:layout_height="25dp"
	        android:textColor="#969696"
	        android:textSize="15dp"
	        android:id="@+id/gender"
	        />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/mine_edit_major"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="3dp"
        android:background="#FFFF"
        >
        <ImageView 
            android:id="@+id/about_arrow_major"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:layout_width="6dp"
            android:layout_height="13dp"
            android:src="@drawable/right_arrow_white"
	        android:layout_marginTop="15dp"
            />
	    <TextView
	        android:layout_toLeftOf="@id/about_arrow_major"
	        android:layout_width="match_parent"
	        android:layout_alignParentLeft="true"
	        android:layout_marginLeft="5dp"
	        android:layout_marginTop="12dp"
	        android:layout_height="25dp"
	        android:textColor="#636363"
	        android:textSize="15dp"
	        android:text="@string/edit_major"
	        />
	    <TextView
	        android:layout_toLeftOf="@id/about_arrow_major"
	        android:layout_width="wrap_content"
	        android:layout_marginRight="5dp"
	        android:layout_marginTop="12dp"
	        android:layout_height="25dp"
	        android:textColor="#969696"
	        android:textSize="15dp"
	        android:id="@+id/major"
	        />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/mine_edit_class"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="3dp"
        android:background="#FFFF"
        >
        <ImageView 
            android:id="@+id/about_arrow_class"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:layout_width="6dp"
            android:layout_height="13dp"
            android:src="@drawable/right_arrow_white"
	        android:layout_marginTop="15dp"
            />
	    <TextView
	        android:layout_toLeftOf="@id/about_arrow_class"
	        android:layout_width="match_parent"
	        android:layout_alignParentLeft="true"
	        android:layout_marginLeft="5dp"
	        android:layout_marginTop="12dp"
	        android:layout_height="25dp"
	        android:textColor="#636363"
	        android:textSize="15dp"
	        android:text="@string/edit_class"
	        />
	    <!-- klass means class..... -->
	    <TextView
	        android:layout_toLeftOf="@id/about_arrow_class"
	        android:layout_width="wrap_content"
	        android:layout_marginRight="5dp"
	        android:layout_marginTop="12dp"
	        android:layout_height="25dp"
	        android:textColor="#969696"
	        android:textSize="15dp"
	        android:id="@+id/klass"
	        />
    </RelativeLayout>
</LinearLayout>
